# supercomp-task1

./: .gitignore  clear_tasks.sh  convert_to_final.py  run_all.py
comparator/: comparator.py
converter/: converter.py
generator/: CMakeLists.txt  generator.cpp
graph500-graph500-3.0.0/generator/: user_settings.h
graph500-graph500-3.0.0/src/: Makefile  big_my_main.c  csr_reference.c  my_main.c  my_main.c.old
my_boost_bfs/: CMakeLists.txt  i_boost_bfs.cpp  main.cpp  tmp.cpp
visul_graph/: visual.py
